# Smart-BibTeX-Validator

./: .gitignore  LICENSE  README.md  bib.py  configuration.json  flake.nix  pyproject.toml  requirements.txt
bib_validator/: __init__.py  bibtex_io.py  cli.py  dedupe.py  interactive_cli.py  lint.py  logging_utils.py  normalize.py  reporting.py  sanitize.py  url_check.py  validator.py
bib_validator/sources/: __init__.py  base.py  crossref.py  dblp.py  scholar.py  semantic.py
bib_validator/tui/: app.py  logic.py  state.py
