[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Smart-BibTeX-Validator"
version = "1.0.0"
description = "Multi-source BibTeX validator against Crossref, DBLP, and Semantic Scholar"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Juri Sacchetta" }]
keywords = ["bibtex", "validation", "crossref", "dblp", "semantic-scholar"]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "bibtexparser==1.4.1",
  "requests==2.31.0",
  "latexcodec==3.0.0",
  "rapidfuzz==3.6.1",
]

[project.scripts]
bib-validator = "bib_validator.cli:main"
